--- a/EmployeeManagement.Web/Pages/EditEmployee.razor
+++ b/EmployeeManagement.Web/Pages/EditEmployee.razor
@@ -5,7 +5,7 @@
 
 
 
-<h3>Edit Employee u</h3>
+<h3>@PageHeaderText</h3>
 <hr />
 <EditForm Model="@EditEmployeeModel" OnValidSubmit="HandleValidSubmit">
     <DataAnnotationsValidator />
@@ -87,6 +87,7 @@
         </div>
     </div>
     <button class="btn btn-primary" type="submit">Submit</button>
+    <button class="btn btn-primary" type="button" @onclick="Delete_Click">Delete</button>
 </EditForm>
 
 
